# nightowl

./: README.md  pyproject.toml
src/nightowl/: cli.py  config.py  email.py  logging.py  pushover.py  runner.py  runs.py  scheduler.py  state.py
tests/: test_cli.py  test_config.py  test_email.py  test_logging.py  test_pushover.py  test_runner.py  test_runs.py  test_scheduler.py  test_state.py
