[project]
name = "nightowl"
version = "0.1.0"
description = "A CLI tool that runs automated overnight tasks on a codebase using Claude Code"
readme = "README.md"
authors = [
    { name = "Tim Hopper", email = "tim@tdhopper.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "click",
]

[project.scripts]
nightowl = "nightowl.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
]
